fix dark mode as default mode

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -679,9 +679,6 @@
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
@@ -1309,11 +1306,6 @@
       border-color: var(--color-gray-200);
     }
   }
-  .divide-zinc-700 {
-    :where(& > :not(:last-child)) {
-      border-color: var(--color-zinc-700);
-    }
-  }
   .divide-zinc-700\/40 {
     :where(& > :not(:last-child)) {
       border-color: color-mix(in srgb, oklch(37% 0.013 285.805) 40%, transparent);
@@ -1537,17 +1529,11 @@
   .border-red-600 {
     border-color: var(--color-red-600);
   }
-  .border-zinc-700 {
-    border-color: var(--color-zinc-700);
-  }
   .border-zinc-700\/40 {
     border-color: color-mix(in srgb, oklch(37% 0.013 285.805) 40%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-zinc-700) 40%, transparent);
     }
-  }
-  .border-y-zinc-700 {
-    border-block-color: var(--color-zinc-700);
   }
   .border-y-zinc-700\/20 {
     border-block-color: color-mix(in srgb, oklch(37% 0.013 285.805) 20%, transparent);
@@ -1937,9 +1923,6 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
-  }
   .px-1\.5 {
     padding-inline: calc(var(--spacing) * 1.5);
   }
@@ -2120,9 +2103,6 @@
   }
   .text-black {
     color: var(--color-black);
-  }
-  .text-red-300 {
-    color: var(--color-red-300);
   }
   .text-red-500 {
     color: var(--color-red-500);
@@ -2674,29 +2654,29 @@
     }
   }
   .dark\:divide-gray-700 {
-    @media (prefers-color-scheme: dark) {
+    &:where(.dark, .dark *) {
       :where(& > :not(:last-child)) {
         border-color: var(--color-gray-700);
       }
     }
   }
   .dark\:bg-zinc-800 {
-    @media (prefers-color-scheme: dark) {
+    &:where(.dark, .dark *) {
       background-color: var(--color-zinc-800);
     }
   }
   .dark\:bg-zinc-900 {
-    @media (prefers-color-scheme: dark) {
+    &:where(.dark, .dark *) {
       background-color: var(--color-zinc-900);
     }
   }
   .dark\:bg-zinc-950 {
-    @media (prefers-color-scheme: dark) {
+    &:where(.dark, .dark *) {
       background-color: var(--color-zinc-950);
     }
   }
   .dark\:text-white {
-    @media (prefers-color-scheme: dark) {
+    &:where(.dark, .dark *) {
       color: var(--color-white);
     }
   }
@@ -2783,29 +2763,29 @@ body {
       outline-offset: 2px;
     }
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     border-color: var(--color-zinc-700);
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     background-color: color-mix(in srgb, oklch(37% 0.013 285.805) 15%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-zinc-700) 15%, transparent);
     }
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     color: var(--color-zinc-200);
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     &::placeholder {
       color: var(--color-zinc-500);
     }
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     &:focus {
       border-color: var(--color-primary);
     }
   }
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     &:focus {
       --tw-ring-color: color-mix(in srgb, oklch(77.7% 0.152 181.912) 10%, transparent);
       @supports (color: color-mix(in lab, red, red)) {
